--- a/galeria.html
+++ b/galeria.html
@@ -25,6 +25,14 @@
   <script>
     const sheetURL = 'https://docs.google.com/spreadsheets/d/170SkNOp1pX22FJs7xgsNs4McSTIldLwI/gviz/tq?tqx=out:json';
 
+    function fixLink(url) {
+      const match = url.match(/\/d\/(.*?)\//);
+      if (match) {
+        return `https://drive.google.com/uc?export=view&id=${match[1]}`;
+      }
+      return url;
+    }
+
     async function fetchData() {
       const res = await fetch(sheetURL);
       const text = await res.text();
@@ -40,7 +48,7 @@
         const item = document.createElement('div');
         item.className = 'item';
         item.innerHTML = `
-          <img src="${img}" alt="${nome}" onclick="zoomImage(this)">
+          <img src="${fixLink(img)}" alt="${nome}" onclick="zoomImage(this)">
           <div class="info">
             <h2>${nome}</h2>
             <p>${descricao}</p>
