--- a/galeria.html
+++ b/galeria.html
@@ -9,104 +9,103 @@
       background-color: #000;
       color: #fff;
       font-family: Arial, sans-serif;
-      padding: 20px;
       text-align: center;
+      margin: 0;
+      padding: 0;
     }
     h1 {
-      color: #00e6b8;
-      margin-bottom: 20px;
+      margin-top: 30px;
+      color: #00ffcc;
     }
     input {
-      padding: 10px;
       width: 90%;
       max-width: 400px;
-      margin-bottom: 30px;
-      border-radius: 5px;
+      padding: 10px;
+      margin: 20px auto;
+      border-radius: 10px;
       border: none;
+      font-size: 16px;
     }
-    .grid {
+    .galeria {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 20px;
+      padding: 20px;
     }
-    .card {
+    .item {
       background: #111;
+      border: 1px solid #333;
       border-radius: 10px;
+      margin: 10px;
       padding: 10px;
       width: 250px;
-      box-shadow: 0 0 10px #00e6b8;
     }
-    .card img {
+    .item img {
       width: 100%;
-      height: auto;
-      border-radius: 5px;
+      border-radius: 10px;
     }
-    .card h3 {
+    .item h3 {
       margin: 10px 0 5px;
+      font-size: 18px;
       color: #00e6b8;
     }
-    .card p {
-      margin: 3px 0;
+    .item p {
       font-size: 14px;
     }
-    a.botao-voltar {
-      display: inline-block;
-      margin-top: 40px;
-      padding: 12px 25px;
-      background: #00b894;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 8px;
-      box-shadow: 0 0 8px #00e6b8;
-    }
-    a.botao-voltar:hover {
+    .botao {
       background-color: #00e6b8;
+      color: black;
+      padding: 10px 20px;
+      margin: 20px auto;
+      border-radius: 10px;
+      text-decoration: none;
+      display: inline-block;
     }
   </style>
 </head>
 <body>
-
   <h1>Galeria de Artes WHOMARS</h1>
   <input type="text" id="busca" placeholder="Buscar por autor, título ou descrição...">
-  <div class="grid" id="galeria"></div>
-
-  <a href="index.html" class="botao-voltar">Voltar à Missão WHOMARS</a>
+  <div class="galeria" id="galeria"></div>
+  <a class="botao" href="index.html">Voltar à Missão WHOMARS</a>
 
   <script>
-    const url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRWKRzTwG5Afh1Um2p38fSHPPvl5Zn9UP6I7sWrThyfv7NZMnEZJeBtElETtqk34M2ulI_t_9ibL8jR/pub?output=tsv";
-
     async function carregarGaleria() {
-      const resposta = await fetch(url);
-      const texto = await resposta.text();
-      const linhas = texto.trim().split("\n");
-      const dados = linhas.slice(1).map(linha => linha.split("\t"));
+      const resposta = await fetch("https://opensheet.elk.sh/170SkNOp1pX22FJs7xgsNs4McSTIldLwI/1");
+      const dados = await resposta.json();
 
-      const container = document.getElementById("galeria");
-      container.innerHTML = "";
+      const galeria = document.getElementById("galeria");
+      const busca = document.getElementById("busca");
 
-      dados.forEach(([nome, titulo, descricao, imagem]) => {
-        const div = document.createElement("div");
-        div.className = "card";
-        div.innerHTML = `
-          <img src="${imagem}" alt="${titulo}">
-          <h3>${titulo}</h3>
-          <p><strong>${nome}</strong></p>
-          <p>${descricao}</p>
-        `;
-        container.appendChild(div);
+      function renderizar(filtro = "") {
+        galeria.innerHTML = "";
+        dados
+          .filter(item =>
+            item.nome?.toLowerCase().includes(filtro) ||
+            item.titulo?.toLowerCase().includes(filtro) ||
+            item.descricao?.toLowerCase().includes(filtro)
+          )
+          .forEach(item => {
+            const div = document.createElement("div");
+            div.className = "item";
+            div.innerHTML = `
+              <img src="${item.imagem}" alt="${item.titulo}">
+              <h3>${item.titulo}</h3>
+              <p>${item.descricao}</p>
+              <p><em>${item.nome}</em></p>
+            `;
+            galeria.appendChild(div);
+          });
+      }
+
+      busca.addEventListener("input", () => {
+        renderizar(busca.value.toLowerCase());
       });
 
-      document.getElementById("busca").addEventListener("input", e => {
-        const termo = e.target.value.toLowerCase();
-        document.querySelectorAll(".card").forEach(card => {
-          card.style.display = card.innerText.toLowerCase().includes(termo) ? "block" : "none";
-        });
-      });
+      renderizar();
     }
 
     carregarGaleria();
   </script>
-
 </body>
 </html>
