--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       color: #fff;
       font-family: Arial, sans-serif;
       text-align: center;
-      padding: 50px;
+      padding: 30px;
     }
     h1 {
       color: #00e6b8;
@@ -18,12 +18,12 @@
     .botao {
       background-color: #00b894;
       color: white;
-      padding: 15px 30px;
-      font-size: 18px;
+      padding: 12px 24px;
+      font-size: 16px;
       border-radius: 10px;
       border: none;
       cursor: pointer;
-      margin: 20px;
+      margin: 10px;
       box-shadow: 0 0 10px #00e6b8;
     }
     .botao:hover {
@@ -39,10 +39,11 @@
     }
     input, textarea {
       width: 100%;
-      padding: 10px;
-      margin: 10px 0;
+      padding: 12px;
+      margin: 8px 0;
       border: none;
-      border-radius: 5px;
+      border-radius: 6px;
+      font-size: 14px;
     }
     button[type="submit"] {
       background-color: #00b894;
@@ -56,6 +57,16 @@
     }
     button[type="submit"]:hover {
       background-color: #00e6b8;
+    }
+    .pix-box {
+      background-color: #222;
+      color: #ddd;
+      padding: 10px;
+      border-radius: 8px;
+      border: 1px solid #00e6b8;
+      font-size: 13px;
+      word-wrap: break-word;
+      margin: 15px 0;
     }
   </style>
 </head>
@@ -74,7 +85,12 @@
 
   <form id="formulario" action="https://formsubmit.co/paulojgoncalves2013@gmail.com" method="POST" enctype="multipart/form-data">
     <h2 style="color:#00e6b8;">Exponha Sua Arte</h2>
-    <p><strong>Teste gratuito ativo</strong> — Nenhum Pix necessário.</p>
+    <p><strong>Para participar, faça um Pix de <span style="color:#00e6b8;">R$ 20,00</span> antes do envio.</strong></p>
+
+    <div class="pix-box">
+      <strong>PIX Copia e Cola:</strong><br>
+      00020126680014br.gov.bcb.pix0136+5511983766776PauloJose520400005303986540520.005802BR5925Paulo Jose Goncalves6009SaoPaulo62070503***6304ABCD
+    </div>
 
     <input type="text" name="nome" placeholder="Seu nome ou nome artístico" required>
     <input type="text" name="titulo" placeholder="Título da obra" required>
