--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <style>
     body {
       background-color: #111;
+      background-image: url('https://i.ibb.co/r2NXXb5c/file-00000000c33462309db9c7afeb488028.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
       color: #fff;
       font-family: Arial, sans-serif;
       text-align: center;
