--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
-  <!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <title>WHOMARS - Galeria de Artes</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Participe da galeria WHOMARS e compartilhe sua arte criativa de memes no espaço.">
+  <meta property="og:title" content="WHOMARS - Galeria de Artes">
+  <meta property="og:description" content="Junte-se à missão WHOMARS e compartilhe sua criatividade memeira.">
+  <meta property="og:image" content="https://i.ibb.co/r2NXXb5c/file-00000000c33462309db9c7afeb488028.png">
+  <meta property="og:url" content="https://gpfk.github.io/">
   <style>
     body {
       background-color: #111;
@@ -15,6 +20,15 @@
       font-family: Arial, sans-serif;
       text-align: center;
       padding: 30px;
+      position: relative;
+    }
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      z-index: -1;
     }
     h1 {
       color: #00e6b8;
@@ -27,7 +41,10 @@
       border-radius: 10px;
       border: none;
       cursor: pointer;
-      margin: 10px;
+      margin: 15px auto;
+      display: block;
+      width: 90%;
+      max-width: 300px;
       box-shadow: 0 0 10px #00e6b8;
     }
     .botao:hover {
@@ -72,6 +89,11 @@
       word-wrap: break-word;
       margin: 15px 0;
     }
+    .pix-box img {
+      margin-top: 10px;
+      max-width: 200px;
+      border-radius: 8px;
+    }
   </style>
 </head>
 <body>
@@ -94,16 +116,27 @@
   <form id="formulario" action="https://formsubmit.co/paulojgoncalves2013@gmail.com" method="POST" enctype="multipart/form-data">
     <h2 style="color:#00e6b8;">Exponha Sua Arte</h2>
     <p><strong>Para participar, faça um Pix de <span style="color:#00e6b8;">R$ 5,00</span> antes do envio.</strong></p>
-
     <div class="pix-box">
       <strong>PIX Copia e Cola:</strong><br>
       00020126680014br.gov.bcb.pix0136+5511983766776PauloJose520400005303986540520.005802BR5925Paulo Jose Goncalves6009SaoPaulo62070503***6304ABCD
+      <br>
+      <img src="https://i.ibb.co/NxQkYrc/qrcode-pix.png" alt="QR Code Pix">
     </div>
+    <p style="font-size:13px; color:#ccc;">Após o envio, você será redirecionado automaticamente para uma página de confirmação.</p>
 
-    <input type="text" name="nome" placeholder="Seu nome ou nome artístico" required>
-    <input type="text" name="titulo" placeholder="Título da obra" required>
-    <textarea name="descricao" placeholder="Breve descrição da arte" rows="4" required></textarea>
-    <input type="file" name="imagem" accept="image/*" required>
+    <label for="nome" style="display:none;">Nome</label>
+    <input type="text" id="nome" name="nome" placeholder="Seu nome ou nome artístico" required>
+
+    <label for="titulo" style="display:none;">Título</label>
+    <input type="text" id="titulo" name="titulo" placeholder="Título da obra" required>
+
+    <label for="descricao" style="display:none;">Descrição</label>
+    <textarea id="descricao" name="descricao" placeholder="Breve descrição da arte" rows="4" required></textarea>
+
+    <label for="imagem" style="display:none;">Imagem</label>
+    <input type="file" id="imagem" name="imagem" accept="image/*" required>
+
+    <input type="text" name="_honey" style="display:none"> <!-- Antispam -->
 
     <button type="submit">Enviar Arte</button>
     <input type="hidden" name="_next" value="https://gpfk.github.io/obrigado.html">
