--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
 
     <div class="pix-box">
       <strong>PIX Copia e Cola:</strong><br>
-      00020126680014br.gov.bcb.pix0136+5511983766776PauloJose520400005303986540520.005802BR5925Paulo Jose Goncalves6009SaoPaulo62070503***6304ABCD
+      00020101021126530014br.gov.bcb.pix0131paulojgoncalves2012@hotmail.com5204000053039865802BR5920Paulo Jose Goncalves6015ITAQUAQUECETUBA62070503***6304A86C
       <br>
-      <img src="https://i.ibb.co/NxQkYrc/qrcode-pix.png" alt="QR Code Pix">
+      <img src="https://api.qrserver.com/v1/create-qr-code/?data=00020101021126530014br.gov.bcb.pix0131paulojgoncalves2012%40hotmail.com5204000053039865802BR5920Paulo%20Jose%20Goncalves6015ITAQUAQUECETUBA62070503***6304A86C&size=300x300" alt="QR Code Pix">
     </div>
 
     <p style="font-size:13px; color:#ccc;">Após o envio, você será redirecionado automaticamente para uma página de confirmação.</p>
