--- a/index.html
+++ b/index.html
@@ -122,17 +122,17 @@
     <button class="botao">Ver no OpenSea</button>
   </a>
 
-  <!-- LOJA DE PRODUTOS -->
+  <!-- Loja de produtos -->
   <a href="https://sualoja.printful.com" target="_blank">
     <button class="botao botao-merch">Comprar Camisetas & Pôsteres</button>
   </a>
 
-  <!-- APOIO COM BUY ME A COFFEE -->
-  <a href="https://www.buymeacoffee.com/whomars" target="_blank">
+  <!-- Apoie com Buy Me a Coffee -->
+  <a href="https://buymeacoffee.com/whomars" target="_blank">
     <img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 60px; width: 217px; margin: 20px auto;">
   </a>
 
-  <!-- FORMULÁRIO DE ENVIO -->
+  <!-- Formulário de envio -->
   <form id="formulario" action="https://formsubmit.co/paulojgoncalves2013@gmail.com" method="POST" enctype="multipart/form-data">
     <h2 style="color:#00e6b8;">Exponha Sua Arte</h2>
     <p><strong>Para participar, faça um Pix de <span style="color:#00e6b8;">R$ 20,00</span> antes do envio.</strong></p>
@@ -146,28 +146,19 @@
 
     <p style="font-size:13px; color:#ccc;">Após o envio, você será redirecionado automaticamente para uma página de confirmação.</p>
 
-    <label for="nome" style="display:none;">Nome</label>
-    <input id="nome" type="text" name="nome" placeholder="Seu nome ou nome artístico" required>
-
-    <label for="titulo" style="display:none;">Título</label>
-    <input id="titulo" type="text" name="titulo" placeholder="Título da obra" required>
-
-    <label for="descricao" style="display:none;">Descrição</label>
-    <textarea id="descricao" name="descricao" placeholder="Breve descrição da arte" rows="4" required></textarea>
-
-    <label for="imagem" style="display:none;">Imagem</label>
-    <input id="imagem" type="file" name="imagem" accept="image/*" required onchange="previewImagem(this)">
-
+    <input type="text" name="nome" placeholder="Seu nome ou nome artístico" required>
+    <input type="text" name="titulo" placeholder="Título da obra" required>
+    <textarea name="descricao" placeholder="Breve descrição da arte" rows="4" required></textarea>
+    <input type="file" name="imagem" accept="image/*" required onchange="previewImagem(this)">
     <img id="preview" alt="Preview da imagem">
 
     <input type="text" name="_honey" style="display:none">
     <input type="hidden" name="_next" value="https://gpfk.github.io/obrigado.html">
     <input type="hidden" name="_captcha" value="false">
-
     <button type="submit">Enviar Arte</button>
   </form>
 
-  <!-- ANÚNCIO COINZILLA -->
+  <!-- Anúncio Coinzilla -->
   <div style="margin: 30px auto;">
     <script async src="https://ads.coinzilla.com/lib/display.js"></script>
     <div id="coinzilla"></div>
